--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="todo__block">
         <h1 class="todo__title">Todolist</h1>
         <form class="todo__form">
-            <input placeholder="Add task" class="todo__field" type="text">
+            <input required placeholder="Add task" class="todo__field" type="text">
             <button type="submit" class="todo__add">Add</button>
             <p class="todo__error">Такая задача уже существует</p>
         </form>
@@ -21,8 +21,21 @@
         <ul class="todo__list">
 
         </ul>
+
+        <div class="todo__bot">
+            <div class="todo__lvl">
+        <span class="todo__lvl-all">
+            1 of 3 tasks done
+        </span>
+                <button class="todo__del-all">
+                    Remove checked
+                </button>
+            </div>
+
+        </div>
     </div>
 </section>
+
 
 
 
